fix(app): fix contrast issue

--- a/src/components/ProjectCard/ProjectCard.css
+++ b/src/components/ProjectCard/ProjectCard.css
@@ -16,7 +16,7 @@
     font-size: 0.9rem;
 
     & .projectName {
-        color: black;
+        color: lightcyan;
         margin: 0;
 
     }
