--- a/src/index.css
+++ b/src/index.css
@@ -29,7 +29,7 @@ body {
 
 a {
     text-decoration: none;
-    color: black;
+    color: lightcyan;
     display: inline-block
 }
 
